--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
+blue = "^0.9.1"
 
 [build-system]
 requires = ["poetry-core"]
