--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python = "^3.10"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 blue = "^0.9.1"
+isort = "^5.11.4"
+mkdocs = "^1.4.2"
 
 [build-system]
 requires = ["poetry-core"]
