--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pytest = "^7.2.1"
 blue = "^0.9.1"
 isort = "^5.11.4"
 mkdocs = "^1.4.2"
+flake8 = "3.8"
+bandit = "^1.7.4"
+pydocstyle = "^6.3.0"
 
 [build-system]
 requires = ["poetry-core"]
